--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .jumbotron {
-    background-image: url(/img/jumbotron_home.jpg);
+    background-image: url("/img/jumbotron_home.jpg");
     background-size: cover;
     height: 100%;
     width: 100%;
